# RainCheckAI

./: .gitignore  Dockerfile  README.md  app.py  engineering.py  generate_synthetic_data.py  ingest_data.py  pyproject.toml  requirements.txt  train_model.py
.github/workflows/: ci.yml
raincheckai/: __init__.py  config.py  contracts.py  errors.py  feature_engineering.py  inference.py  ingestion.py  logging_utils.py  telemetry.py  training.py
raincheckai/api/: __init__.py  app.py  schemas.py
src/: __init__.py  predict.py
tests/: test_api.py  test_engineering.py  test_ingest_data.py  test_training_integration.py
ui/: streamlit_app.py
