[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = ["artifacts", "data", ".venv", "venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.10"
files = ["raincheckai", "app.py", "engineering.py", "ingest_data.py", "train_model.py", "src/predict.py"]
disallow_untyped_defs = true
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
exclude = "(artifacts|data|\\.venv|venv)"
ignore_missing_imports = true
